--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "00-React-App",
+  "name": "deploy",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.14.12",
+    "node": "14.16.1"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
